--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
   <div id='container'>
+    <nav>
+      <a href='index.html' class='selected'>Home</a>
+      <a href='about.html'>About</a>
+      <a href='portfolio.html'>Portolio</a>
+      <a href='contact.html'>Contact</a>
+    </nav>
     <h1>My Site</h1>
     <div class='two-column'>
       <div class='left'>
